--- a/mauiblazor/RecipeFriends/Components/ImageGallery/ImageGallery.razor
+++ b/mauiblazor/RecipeFriends/Components/ImageGallery/ImageGallery.razor
@@ -6,36 +6,37 @@
     <div>
         <MudGrid Justify="Justify.FlexStart">
             <MudItem xs="12">
-            
-                <MudDropContainer T="ImageData" Items="_list" CanDropClass="mud-border-info" NoDropClass="mud-border-error" 
-                        CanDrop=@( (item,identifier ) => item.Order.ToString() != @"-11" )
-                        ItemsSelector=@( (item, column) => item.Order.ToString() == column )
-                        ItemDropped="ItemUpdated" Class="border-2 border-solid mud-border-lines-default">
+
+                <MudDropContainer T="ImageData" Items="_list" CanDropClass="mud-border-info"
+                    NoDropClass="mud-border-error" CanDrop=@( (item,identifier ) => item.Order.ToString() != @"-11" )
+                    ItemsSelector=@( (item, column) => item.Order.ToString() == column ) ItemDropped="ItemUpdated"
+                    Class="border-2 border-solid mud-border-lines-default">
                     <ChildContent>
                         <MudGrid Justify="Justify.FlexStart" Identifier="mudgridje">
-                            @{ 
+                            @{
                                 int c = 1;
-                                foreach(var image in _list)
-                                {   
+                                foreach (var image in _list)
+                                {
                                     // capture value in local variable
                                     int zoneIdentifier = c;
                                     <MudItem xs="3" Identifier="muditempje">
-                                        <MudDropZone T="ImageData" Identifier="@zoneIdentifier.ToString()" 
-                                            AllowReorder="true"                            
-                                            DraggingClass="mud-theme-success" Class="d-flex justify-center align-center border-2 border-solid docs-gray-bg mud-border-lines-default"/>
+                                        <MudDropZone T="ImageData" Identifier="@zoneIdentifier.ToString()" AllowReorder="true"
+                                            DraggingClass="mud-theme-success"
+                                            Class="d-flex justify-center align-center border-2 border-solid docs-gray-bg mud-border-lines-default" />
                                     </MudItem>
                                     c++;
                                 }
                             }
-                        </MudGrid> 
+                        </MudGrid>
                     </ChildContent>
                     <ItemRenderer>
-                        <MudImage Src="@GetDataURL(context.Name, context.Data)" Alt="@context.Title" Elevation="25" Class="rounded-lg" style="max-height:200px;max-width:200px;height:auto;width:auto;" />
+                        <MudImage Src="@GetDataURL(context.Name, context.Data)" Alt="@context.Title" Elevation="25"
+                            Class="rounded-lg" style="max-height:200px;max-width:200px;height:auto;width:auto;" />
                     </ItemRenderer>
                 </MudDropContainer>
             </MudItem>
             <MudItem xs="12" Class="custom-muditem" style="overflow: hidden;">
-                <FileDropZone OnFileAdded="HandleFileAdded" ></FileDropZone>
+                <FileDropZone OnFileAdded=HandleFileAdded></FileDropZone>
             </MudItem>
         </MudGrid>
     </div>
@@ -43,16 +44,19 @@
 
 @code {
 
-    [Parameter] public List<ImageData> ImagesToShow 
-        { 
-            get {
-                return _imagesToShow;
-            }
-            set {
-                _imagesToShow = value;
-                _list = _imagesToShow.OrderBy(x => x.Order);
-            } 
+    [Parameter]
+    public List<ImageData> ImagesToShow
+    {
+        get
+        {
+            return _imagesToShow;
         }
+        set
+        {
+            _imagesToShow = value;
+            _list = _imagesToShow.OrderBy(x => x.Order);
+        }
+    }
     [Parameter] public EventCallback<IBrowserFile> OnFileAdded { get; set; }
 
 
@@ -66,8 +70,8 @@
         Logger.Info("ImageGallery => init");
     }
 
-	private void ItemUpdated(MudItemDropInfo<ImageData> info)
-	{
+    private void ItemUpdated(MudItemDropInfo<ImageData> info)
+    {
         try
         {
             //info.Item.Status = info.DropzoneIdentifier;
@@ -84,21 +88,27 @@
         {
             Logger.Error(ex, "Something is wrong handling the added file");
         }
-	}
+    }
 
     private async Task HandleFileAdded(IBrowserFile file)
     {
-        await OnFileAdded.InvokeAsync(file);
-
-        // we are in an event and changing data. Notify that the state is changed and the UI will be redrawn properly
-        //StateHasChanged();
+        try
+        {
+            await OnFileAdded.InvokeAsync(file);
+            // we are in an event and changing data. Notify that the state is changed and the UI will be redrawn properly
+            StateHasChanged();
+        }
+        catch (Exception ex)
+        {
+            Logger.Error(ex, "Oepsie executing HandleFileAdded");
+        }
     }
 
     public static string GetDataURL(string fileName, byte[] imgData)
     {
-        return "data:image" 
-                    + Path.GetExtension(fileName).Replace(".","").ToLower()
-                    + ";base64," 
-                    + Convert.ToBase64String(imgData);
+        return "data:image"
+        + Path.GetExtension(fileName).Replace(".", "").ToLower()
+        + ";base64,"
+        + Convert.ToBase64String(imgData);
     }
 }
